[package]
name = "gpuiua"
version = "0.1.0"
edition = "2024"

[dependencies]
async-oneshot = "0.5.9"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.11.8"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
log = "0.4.27"
logos = "0.15.0"
ordered-float = "5.0.0"
pollster = "0.4.0"
rand = "0.9.1"
wasm-bindgen-futures = "0.4.50"
wgpu = "25.0.0"
